@@ -1,5 +1,10 @@
 2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* lib/user32/include/debug.h (ASSERT): Don't call KeBugCheck.
+	* lib/user32/misc/dllmain.c (KeBugCheck): Remove declaration.
+
+2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* drivers/net/tcpip/include/.cvsignore: New file.
 	* drivers/net/tcpip/include/precomp.h: New file.
 	* drivers/net/tcpip/Makefile (TARGET_PCH): Set to include/precomp.h.
